--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
