--- a/css/default.css
+++ b/css/default.css
@@ -60,22 +60,31 @@ fieldset, img {border:0;}
 img, iframe {vertical-align:top;}
 legend, caption {visibility:hidden;width:0;font-size:0;line-height:0;text-indent:-5000px;}
 address, em {font-style:normal;}
-button {overflow:visible;cursor:pointer;background:none;border:0;}
+button {overflow:visible;cursor:pointer;background:none;border:0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
 input, select, textarea, button, label, td img {vertical-align:middle;}
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, nav, menu, nav, section {display:block;}
 
 select {height:38px;border:1px solid #d0d0d0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
-textarea, .inputTxt {padding:7px 5px;border:1px solid #d0d0d0;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
-.inputChk {vertical-align:middle;}
+textarea, .inputTxt {padding:7px 5px;border:1px solid #ddd;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
+input.inputTxt:focus {border:1px solid #57b8bb;}
+.inputChk {vertical-align:-1px;}
 
 .chkS {display:inline-block;margin:0 15px 0 0;cursor:pointer;vertical-align:middle;}
 .chkS input {position:absolute;visibility:hidden;position:static\9;visibility:visible\9;}
 .chkS input + span {display:inline-block;}
-.chkS input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:20px;height:20px;background:url(/_img/bg_chkS.png) no-repeat 0 0;vertical-align:-3px;}
+.chkS input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:20px;height:20px;background:url(../images/bg_chkS.png) no-repeat 0 0;vertical-align:-3px;}
 .chkS input:checked + span:before {background-position:0 -20px;}
+
+.chkB {display:inline-block;margin:0 15px 0 0;cursor:pointer;vertical-align:middle;}
+.chkB input {position:absolute;visibility:hidden;position:static\9;visibility:visible\9;}
+.chkB input + span {display:inline-block;}
+.chkB input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:18px;height:18px;background:url(../images/bg_chkB.gif) no-repeat 0 -20px;border:1px solid #7f7f7f;vertical-align:middle;}
+.chkB input:checked + span:before {background-position:0 0;}
 
 .radioS {display:inline-block;margin:0 15px 0 0;cursor:pointer;vertical-align:middle;}
 .radioS input {position:absolute;visibility:hidden;position:static\9;visibility:visible\9;}
 .radioS input + span {display:inline-block;}
-.radioS input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:20px;height:20px;background:url(/_img/bg_radioS.png) no-repeat 0 0;vertical-align:-3px;}
+.radioS input + span:before {content:"";display:inline-block;display:none\9;margin:0 10px 0 0;width:20px;height:20px;background:url(../images/bg_radioS.png) no-repeat 0 0;vertical-align:-3px;}
 .radioS input:checked + span:before {background-position:0 -20px;}
+
+hr {margin:50px 0;border:0;border-top:1px solid #000;}
