--- a/css/default.css
+++ b/css/default.css
@@ -51,7 +51,7 @@
  }
 
 * {margin:0;padding:0;}
-body {color:#555;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
+body {color:#555;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200;}
 a {color:#555;text-decoration:none;}
 ol, li {list-style:none;}
 table {table-layout:fixed;width:100%;border-collapse:collapse;border:0;}
@@ -60,13 +60,14 @@ fieldset, img {border:0;}
 img, iframe {vertical-align:top;}
 legend, caption {visibility:hidden;width:0;font-size:0;line-height:0;text-indent:-5000px;}
 address, em {font-style:normal;}
-button {overflow:visible;cursor:pointer;background:none;border:0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
+button {overflow:visible;cursor:pointer;background:none;border:0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
 input, select, textarea, button, label, td img {vertical-align:middle;}
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, nav, menu, nav, section {display:block;}
 
-select {height:38px;border:1px solid #d0d0d0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
-textarea, .inputTxt {padding:7px 5px;border:1px solid #ddd;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;}
-input.inputTxt:focus {border:1px solid #57b8bb;}
+select {height:36px;border:1px solid #d0d0d0;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
+textarea, .inputTxt {padding:7px 5px;border:1px solid #ddd;resize:none;font:14px/1.4 Noto Sans KR, '돋움', dotum, sans-serif;font-weight:200}
+input.inputTxt:focus,
+textarea:focus {border:1px solid #57b8bb;}
 .inputChk {vertical-align:-1px;}
 
 .chkS {display:inline-block;margin:0 15px 0 0;cursor:pointer;vertical-align:middle;}
