--- a/css/common.css
+++ b/css/common.css
@@ -126,14 +126,22 @@
 .tabList .current a {position:relative;height:41px;line-height:40px;background:#fff;border-top:3px solid #8e9840;border-bottom:1px solid #fff;font-weight:500;}
 .tabList .current a:after {display:block}
 
-.tabItem4 li {width:25%;}
-
 .tabListType2 ul {zoom:1;}
 .tabListType2 ul:after {content:"";display:block;clear:both;}
 .tabListType2 li {float:left;padding:0 15px;border-left:1px solid #c0c0c0;}
 .tabListType2 li:first-child {padding-left:0;border:0;}
 .tabListType2 a {color:#303030;font-size:16px;}
 .tabListType2 .current a {padding-left:22px;background:url(../images/icon_tabtype2_on.png) no-repeat 0 4px;font-weight:bold;}
+
+.tabListType3 {border-bottom:2px solid #151515;}
+.tabListType3 ul {zoom:1;margin:90px 1px 0;}
+.tabListType3 ul:after {content:"";display:block;clear:both;}
+.tabListType3 li {float:left;}
+.tabListType3 li a {display:block;height:45px;line-height:45px;margin:0 -1px;background:#fff;border:1px solid #dcdcdc;border-bottom:0;color:#484848;font-size:16px;text-align:center;}
+.tabListType3 .current a {position:relative;height:46px;line-height:46px;margin-bottom:-2px;border:2px solid #151515;border-bottom:0;font-size:18px;}
+
+
+.tabItem4 li {width:25%;}
 /* //탭 메뉴 */
 
 /* 게시판 */
